@@ -1,3 +1,5 @@
+* fix - sorting group by context in business overview
+* feature - grouping by role (@$_)
 * fix - feature delete
 * fix - correct parsing scenario|feature|background title when in title appear ':'
 * fix - syntax highlighting ( Background:, Examples:, And, But )
